# Claude-helper

./: .gitignore  CLAUDE.md  CLAUDE_INTEGRATION_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  TESTING_ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  install.sh
.claude-templates/: settings.json
.claude-templates/commands/: master.md  optimize.md  token-usage.md
src/: lib.rs  main.rs
src/agents/: base.rs  capabilities.rs  claude_agent.rs  manager.rs  mod.rs
src/analyzer/: mod.rs  optimizer.rs  session_parser.rs
src/cache/: mod.rs
src/config/: auth.rs  mod.rs
src/db/: mod.rs  schema.rs
src/master/: agent_factory.rs  mod.rs  orchestrator.rs  planner.rs
src/statusline/: mod.rs  usage_tracker.rs
src/tui/: app.rs  mod.rs  widgets.rs
tests/common/: mod.rs
tests/integration/: database_tests.rs
