[package]
name = "claude-helper"
version = "0.1.0"
edition = "2021"
authors = ["Claude Helper Contributors"]
description = "Advanced orchestration and optimization tool for Claude Code with Master Coder agent system"
license = "MIT"
repository = "https://github.com/Metroseksuaali/Claude-helper"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11" # Interactive prompts

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dirs = "5.0" # For finding home directory

# Terminal colors
colored = "2.1"

# Progress bars
indicatif = "0.17"

# Async streams
futures = "0.3"

# Async trait
async-trait = "0.1"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "claude-helper"
path = "src/main.rs"

[[test]]
name = "database_tests"
path = "tests/integration/database_tests.rs"
